# kiro

./: PLUGIN.md  README.md
.claude-plugin/: marketplace.json  plugin.json
kiro-web-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
kiro-web-app/src/: App.tsx  index.css
kiro-web-app/src/components/: Layout.tsx
kiro-web-app/src/pages/: AIReasoning.tsx  Commands.tsx  ContentCoverage.tsx  Examples.tsx  Execution.tsx  Home.tsx  Methodology.tsx  Navigation.tsx  Process.tsx  Prompting.tsx  Resources.tsx  SteeringDocs.tsx  SystemDocs.tsx  Templates.tsx  ValidationReport.tsx
mcp-server/: MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
mcp-server/examples/: README.md  mcp-config.json
mcp-server/src/kiro_mcp_server/: __init__.py  __main__.py  server.py
mcp-server/tests/: __init__.py  test_server.py
skills/: README.md
spec-process-guide/ai-reasoning/: thought-processes.md
spec-process-guide/examples/: README.md  lightweight-examples.md  spec-upgrade-examples.md
spec-process-guide/execution/: troubleshooting.md
spec-process-guide/methodology/: overview.md  philosophy.md
spec-process-guide/prompting/: strategies.md
spec-process-guide/resources/: further-reading.md
